--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "schdesign-logotar",
+  "homepage": "https://logotar.schdesign.hu/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
