--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build project
     uses: simonyiszk/schdesign-logotar/.github/workflows/build.yml@main
   deploy:
+    if: github.repository_owner == 'simonyiszk'
     needs: build
     name: Deploy project
     uses: simonyiszk/schdesign-logotar/.github/workflows/deploy.yml@main
