eslint and prettier support

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,15 +2,17 @@ name: Publish
 on:
   push:
     branches:
-      - master
       - main
-
 jobs:
+  check:
+    name: Check syntax
+    uses: ./.github/workflows/check.yml
   build:
+    if: github.repository_owner == 'simonyiszk'
     name: Build project
-    uses: simonyiszk/schdesign-logotar/.github/workflows/build.yml@main
+    uses: ./.github/workflows/build.yml
   deploy:
     if: github.repository_owner == 'simonyiszk'
     needs: build
     name: Deploy project
-    uses: simonyiszk/schdesign-logotar/.github/workflows/deploy.yml@main
+    uses: ./.github/workflows/deploy.yml
