--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "compile": "bun run manager.ts --svg-path ./static/icons > src/data/export.json",
+    "postinstall": "bun run compile"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "argparse": "^2.0.1",
     "autoprefixer": "^10.4.20",
     "bits-ui": "^1.0.0-next.74",
     "clsx": "^2.1.1",
@@ -35,6 +38,7 @@
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "^3.4.9",
     "tailwindcss-animate": "^1.0.7",
+    "toml": "^3.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.11",
