--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/bun": "^1.1.14",
     "argparse": "^2.0.1",
     "autoprefixer": "^10.4.20",
     "bits-ui": "^1.0.0-next.74",
