--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
-    "@vitejs/plugin-react": "4.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "8.40.0",
     "eslint-plugin-react": "7.32.2",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
-    "vite": "4.3.9"
+    "vite": "^6.2.2"
   }
 }
