--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 18.13.0
+          node-version: 18
 
       - name: Install NPM packages
         run: npm ci
@@ -22,11 +22,15 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Debug Build Output
+        run: ls -al ./dist || echo "dist folder not found!"
+
       #- name: Run tests
       #  run: npm run test
 
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v2
+        if: success()
+        uses: actions/upload-artifact@v3
         with:
           name: production-files
           path: ./dist
