--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,11 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
-          name: production-files
+          pattern: production-files-*
           path: ./dist
+          merge-multiple: true
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
