--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@payloadcms/db-postgres": "3.28.1",
     "@payloadcms/next": "3.28.1",
+    "@payloadcms/plugin-cloud-storage": "3.28.1",
     "@payloadcms/richtext-lexical": "3.28.1",
     "@t3-oss/env-nextjs": "0.12.0",
     "cross-env": "7.0.3",
