--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,7 @@ POSTGRES_DB="" # logotar-db
 POSTGRES_PORT="" # 5432
 POSTGRES_HOST="" # localhost
 
-# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-# postgres://logotar-user:logotar-password@localhost:5432/logotar-db
-DATABASE_URL=""
+DATABASE_URL="" # postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 PAYLOAD_SECRET="" # run `openssl rand -base64 32` and paste the output here. This should be the same as in the web app
 
