--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.0",
+    "@stylistic/eslint-plugin-js": "4.2.0",
     "@types/node": "22.13.10",
     "@types/react": "19.0.11",
     "@types/react-dom": "19.0.4",
     "eslint": "9.22.0",
     "eslint-config-next": "15.2.3",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.27.0"
   },
   "engines": {
     "node": "^22",
