--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
     "paths": {
       "~/*": [
         "./src/*"
+      ],
+      "@payload-config": [
+        "./src/payload.config.ts"
       ]
     }
   },
