--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload"
   },
   "dependencies": {
+    "@mui/icons-material": "6.4.8",
+    "@mui/material": "6.4.8",
+    "@mui/material-nextjs": "6.4.3",
+    "@mui/material-pigment-css": "6.4.8",
     "@payloadcms/db-postgres": "3.28.1",
     "@payloadcms/next": "3.28.1",
     "@payloadcms/richtext-lexical": "3.28.1",
     "@payloadcms/storage-vercel-blob": "3.28.1",
+    "@pigment-css/react": "0.0.30",
     "@t3-oss/env-nextjs": "0.12.0",
     "cross-env": "7.0.3",
     "graphql": "16.10.0",
@@ -27,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.0",
+    "@pigment-css/nextjs-plugin": "0.0.30",
     "@stylistic/eslint-plugin-js": "4.2.0",
     "@types/node": "22.13.10",
     "@types/react": "19.0.11",
