--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,5 +53,6 @@
     ".next",
     ".vercel",
     "node_modules",
+    "eslint.config.js", // https://github.com/typescript-eslint/typescript-eslint/pull/11304
   ]
 }
