--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@pigment-css/nextjs-plugin": "0.0.30",
-    "@stylistic/eslint-plugin-js": "4.4.1",
+    "@stylistic/eslint-plugin": "4.4.1",
     "@types/node": "24.0.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
