--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "schdesign-logotar",
   "version": "3.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -37,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
+    "@next/eslint-plugin-next": "15.3.5",
     "@pigment-css/nextjs-plugin": "0.0.30",
     "@stylistic/eslint-plugin": "5.2.2",
     "@types/node": "24.1.0",
@@ -48,7 +48,7 @@
     "typescript-eslint": "8.38.0"
   },
   "engines": {
-    "node": "^22 || ^24",
+    "node": "^22",
     "pnpm": "^10"
   }
 }
